fix: [RGOeX-26384] Extra spacing around page body

--- a/paragon/_common.scss
+++ b/paragon/_common.scss
@@ -1,5 +1,6 @@
 body {
     font-family: $font;
+    margin: 0 !important; // this row must be deleted after this PR - https://github.com/openedx/frontend-app-communications/pull/193 will be merged
 }
 
 .container,
